--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,8 @@ services:
             - ./src:/app/src
         env_file:
             - .env
+        ports:
+            - 3000:3000
         depends_on:
             - database
     database:
@@ -16,12 +18,11 @@ services:
         env_file:
             - .env
         ports:
-          - "5432:5432"
+            - "5432:5432"
         volumes:
-          - ./postgres:/var/lib/postgresql/data
+            - ./postgres:/var/lib/postgresql/data
         healthcheck:
-            test: pg_isready
+            test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
             interval: 5s
             timeout: 10s
             retries: 5
-
