--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "author": "Jonathan Schwarz",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@jonschwarz23/cras-noster-client": "1.0.10",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.3",
+    "express": "^4.18.2",
+    "fastest-levenshtein": "^1.0.16",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
